force-app/main/default/objects/Plant_A_Tree_Settings__mdt/Plant_A_Tree_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Plant A Tree Settings</label>
    <pluralLabel>Plant A Tree Settings</pluralLabel>
</CustomObject> 