force-app/main/default/objects/Plant_A_Tree_Settings__mdt/fields/Enterprise_ID__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ID__c</fullName>
    <description>When you set up your Production Reforestation as a Service (RaaS) account, you&apos;ll be issued with an EnterpriseID - enter that here - https://digitalhumani.com/</description>
    <label>Enterprise ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>