force-app/main/default/objects/Plant_A_Tree_Settings__mdt/fields/Opportunity_Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Minimum_Amount__c</fullName>
    <label>Opportunity Minimum Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 