force-app/main/default/objects/Plant_A_Tree_Settings__mdt/fields/Plant_a_tree_API_url__c.field-meta.xml
<CustomField>
    <fullName>Plant_a_tree_API_url__c</fullName>
    <description>The url for the Reforestation as a Service (RaaS) project. 

The free sandbox API can be used for testing, or the production URL can be used to plant actual trees (cost implications)</description>
    <label>Plant a tree API url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>