force-app/main/default/objects/Plant_A_Tree_Settings__mdt/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>Similar to the Enterprise ID, this will be provided when you create your https://digitalhumani.com/ account</description>
    <label>Project ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>