force-app/main/default/objects/Plant_A_Tree_Settings__mdt/fields/X_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>X_Api_Key__c</fullName>
    <description>API Key as provided on registration for RaaS service</description>
    <label>X-Api-Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 